2003/06/20 11:29 muppetman

	* README, Makefile.PL: bump version number for 0.24 release

2003/06/19 00:44 pcg

	* Depends.pm: moved to ExtUtils-Depends module.
	* Makefile.PL: add ExtUtils-Depends as prerequisite, please
	install the ExtUtils::Depends module seperately from cvs.

2003/06/16 14:21 muppetman

	* GBoxed.xs, gperl.h: converted GBoxed to use vtable-based wrappers;
	this allows client code to install new wrapper classes that make
	gperl_sv_from_value and gperl_value_from_sv call the right code
	to convert boxed types in custom ways.  GPerlBoxedPackageFunc has
	disappeared and the call signature for gperl_register_boxed has
	changed (well, the meaning of that one extra parameter -- if you
	already passed NULL, there's nothing to worry about).

	* GMainLoop.xs, typemap: added support for some GMainContext and
	GMainLoop methods.

2003/06/13 14:12 muppetman

	* GObject.xs: rename Glib::Object->_new to Glib::Object->new -- it
	should be that because people expect it.  other cleanup.  NOTE: we 
	need to have object wrappers be able to override things like "take
	ownership", "wrap", "unwrap", and "destroy"... as it is, if you
	create a wrapper for a GtkObject from Glib::Object->new, the wrapper
	will be created incorrectly (gtk_object_sink will not be called).
	to do all of this correctly will also require wrapper caching, 
	which i haven't made work reliably...  but i'm working on it now.

2003/06/12 15:18 muppetman

	* GClosure.xs: protect yourself from maniacal code that passes in
	something to get a return value from closures/callbacks with no
	return value.  this makes gperl_value_from_sv stop warning about
	bad types on the activate signal for GtkEntry, for example.

2003/06/11 09:25 muppetman

	* GValue.xs: undef is also false; use SvTRUE instead of SvIV when
	evaluating an SV as a gboolean to allow undef to pass quietly.

	* GType.xs: add Glib::Double

2003/06/17 18:21 muppetman

	* gperl.h, xs/GObject.xs: move sink functions into Glib, 