@@ -9,7 +9,7 @@
 
 # change 'tests => 1' to 'tests => last_test_to_print';
 
-use Test::More tests => 1;
+use Test::More tests => 3;
 BEGIN { use_ok('Glib') };
 
 #########################
@@ -18,10 +18,10 @@ BEGIN { use_ok('Glib') };
 # its man page ( perldoc Test::More ) for help writing this test script.
 
 my $obj = new Glib::Object "Glib::Object";
-warn "hiya $obj\n";
-#undef $obj;
-warn "hiya2 $obj\n";
-die;
+ok(2);
+
+undef $obj;
+ok(3);
 
 # FIXME need to define an instantiatable subclass of GObject and test out
 # ref counting, signals, properties, object data, and all that fun stuff.
