@@ -1,3 +1,12 @@
+2003/06/22 14:52 pcg
+
+        * GObject.xs: big change in how perl wrappers are implemented. the
+        new implementation will only ever create one perl wrapper (a real
+        hash) for any gobject. The combined perl+gobject will stay alive
+        as long as one of the partners is alive. The only real changes are
+        in gperl_new_object and in the DESTROY method.
+        * gperl.h: fix some of the documentation to reflect the new model.
+
 2003/06/20 11:29 muppetman
 
 	* README, Makefile.PL: bump version number for 0.24 release
